# nns-and-dl-149022

./: .gitignore  README.md  pyproject.toml
notebooks/: 0-torch-beginners.ipynb  1-the-perceptron-sol.ipynb  1-the-perceptron.ipynb  2-gd-sgd-by-hand.ipynb  2-the-perceptron-nn.ipynb
