[project]
name = "info-tutorato"
version = "0.1.0"
description = "Hands-on PyTorch and deep learning notebooks for economics students"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
